--- a/Home.css
+++ b/Home.css
@@ -4,7 +4,7 @@ body {
 }
 
 .jumbotron {
-    background-image: url(Images/wd1.jpg);
+    background-image: url(http://techysite.gearhostpreview.com/Images/wd2.jpg);
     background-position: 0% 50%;
     background-size: cover;
     background-repeat: no-repeat;
